kubernetes/test/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: zorginzicht-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: zorginzicht-backend:2.0.0-SNAPSHOT
        name: zorginzicht-backend
